chore: fixed compatibility issues with Java 11 compliance
open issue: Polygon2D and Polyline2D methods access to internal sun API - needs refactoring